--- a/PrestaLabDICIS/PrestaLabDICIS.Web/Views/Articulos/Edit.cshtml
+++ b/PrestaLabDICIS/PrestaLabDICIS.Web/Views/Articulos/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model PrestaLabDICIS.Web.Data.Entities.Articulo
+﻿@model PrestaLabDICIS.Web.Models.ArticuloViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,9 +10,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ImageUrl" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -29,9 +30,9 @@
                 <span asp-validation-for="InfoArticulo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" class="form-control" type="file" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <div class="checkbox">
@@ -50,6 +51,12 @@
                 <a asp-action="Index" class="btn btn-success">Back to List</a>
             </div>
         </form>
+    </div>
+    <div class="col-md-4">
+        @if (!string.IsNullOrEmpty(Model.ImageUrl))
+        {
+            <img src="@Url.Content(Model.ImageUrl)" alt="Image" style="width:200px;height:300px;max-width: 100%; height: auto;" />
+        }
     </div>
 </div>
 
