--- a/PrestaLabDICIS/PrestaLabDICIS.Web/Views/Shared/_Layout.cshtml
+++ b/PrestaLabDICIS/PrestaLabDICIS.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,18 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Articulos" asp-action="Index">Materiales</a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    @if (this.User.Identity.IsAuthenticated)
+                    {
+                        <li><a asp-area="" asp-controller="Account" asp-action="ChangeUser">@this.User.Identity.Name</a></li>
+                        <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                    }
+                    else
+                    {
+                        <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+                    }
+                </ul>
+
             </div>
         </div>
     </nav>
