--- a/PrestaLabDICIS/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms/Views/ProductsPage.xaml
+++ b/PrestaLabDICIS/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms/Views/ProductsPage.xaml
@@ -12,10 +12,40 @@
             BindingContext="{Binding Products}"
         	Padding="5">
             <ListView
+                IsRefreshing="{Binding IsRefreshing}"    
                 HasUnevenRows="True"
             	ItemsSource="{Binding Products}">
-
-
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Image
+                                	Grid.Column="0"
+                                	Source="{Binding ImageFullPath}"
+                                	WidthRequest="100">
+                                </Image>
+                                <StackLayout
+                                	Grid.Column="1"
+                                	VerticalOptions="Center">
+                                    <Label
+                                    	FontAttributes="Bold"
+                                    	FontSize="Medium"
+                                    	Text="{Binding Nombre}"
+                                    	TextColor="Black">
+                                    </Label>
+                                    <Label
+                                    	Text="{Binding Stock, StringFormat='Stock: {0:N2}'}"
+                                    	TextColor="Black">
+                                    </Label>
+                                </StackLayout>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
         </StackLayout>
     </ContentPage.Content>
