--- a/PrestaLabDICIS/PrestaLabDICIS.Web/Views/Shared/_Layout.cshtml
+++ b/PrestaLabDICIS/PrestaLabDICIS.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Articulos" asp-action="Index">Materiales</a></li>
+                    <li><a asp-area="" asp-controller="Orders" asp-action="Index">Prestamos</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     @if (this.User.Identity.IsAuthenticated)
